Create some models and make some changes

--- a/AlifTechTask.Data/AlifTechTask.Data.csproj
+++ b/AlifTechTask.Data/AlifTechTask.Data.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.10" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AlifTechTask.Domain\AlifTechTask.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
