--- a/AlifTechTask/appsettings.json
+++ b/AlifTechTask/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AlifTechConnectionString": "Host=localhost; Database=AlifTech; User Id=postgres; Password=1234;"
+  },
+  "Jwt": {
+    "Issuer": "aliftech",
+    "Key": "b0694d83-18fc-465f-abbd-dfcd94d1eca8",
+    "lifetime": 15
+  }
 }
