Create transaction service and make some changes

--- a/AlifTechTask/appsettings.json
+++ b/AlifTechTask/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AlifTechConnectionString": "Host=localhost; Database=AlifTech; User Id=postgres; Password=1234;"
+    "AlifTechConnectionStringOfTransaction": "C:\\Users\\Muhammad Amin\\source\\repos\\AlifTech\\AlifTechTask\\wwwroot\\Transactions.json",
+    "AlifTechConnectionStringOfUser": "C:\\Users\\Muhammad Amin\\source\\repos\\AlifTech\\AlifTechTask\\wwwroot\\Users.json"
   },
   "Jwt": {
     "Issuer": "aliftech",
