--- a/AlifTechTask/AlifTechTask.Api.csproj
+++ b/AlifTechTask/AlifTechTask.Api.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\AlifTechTask.Service\AlifTechTask.Service.csproj" />
   </ItemGroup>
 
 </Project>
