Some new changes

--- a/AlifTechTask.Data/AlifTechTask.Data.csproj
+++ b/AlifTechTask.Data/AlifTechTask.Data.csproj
@@ -7,6 +7,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Databases\Transactions.json" />
+    <None Remove="Databases\Users.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Databases\Transactions.json">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Include="Databases\Users.json">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.10" />
   </ItemGroup>
 
