--- a/AlifTechTask/appsettings.json
+++ b/AlifTechTask/appsettings.json
@@ -7,8 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AlifTechConnectionStringOfTransaction": "C:\\Users\\Muhammad Amin\\source\\repos\\AlifTech\\AlifTechTask\\wwwroot\\Transactions.json",
-    "AlifTechConnectionStringOfUser": "C:\\Users\\Muhammad Amin\\source\\repos\\AlifTech\\AlifTechTask\\wwwroot\\Users.json"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB; Database=AlifTech;"
   },
   "Jwt": {
     "Issuer": "aliftech",
